src/test/ui/span/send-is-not-static-ensures-scoping.nll.stderr
error[E0597]: `y` does not live long enough
  --> $DIR/send-is-not-static-ensures-scoping.rs:29:16
   |
LL |           scoped(|| {
   |  ________________^
LL | |             let _z = y;
LL | |             //~^ ERROR `y` does not live long enough
LL | |         })
   | |_________^ borrowed value does not live long enough
LL |       };
   |       - borrowed value only lives until here
LL | 
LL |       bad.join();
   |       --- borrow later used here

error[E0597]: `x` does not live long enough
  --> $DIR/send-is-not-static-ensures-scoping.rs:26:17
   |
LL |         let y = &x;
   |                 ^^ borrowed value does not live long enough
...
LL |     };
   |     - borrowed value only lives until here
LL | 
LL |     bad.join();
   |     --- borrow later used here

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0597`.
